--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
    }
    
    h3 {
-   font-family: "Helvetica"; color: #3955AD;
+   font-family: "Helvetica"; color: #2B7AD8;
    }
    
    a { 
@@ -25,7 +25,7 @@
    margin: 0;
    padding: 0;
    overflow: hidden;
-   background-color: #3955AD;
+   background-color: #2B7AD8;
    position: fixed;
    top: 0;
    width: 100%;
