--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
    }
    
    h2 {
-   padding-left:5%;
+   padding-left:40px;
    font-size: 20px;
    font-family: "Helvetica"; color: #FFFFFF;
    }
