--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
    a { 
    color: #000000; 
    text-decoration: none;
-   } 
+   }
    
    ul {
    list-style-type: none;
@@ -82,9 +82,9 @@
    background: #211F1F;
    color: white;
    }
-   
-   .fa-facebook {
-   background: #3B5998;
+
+   .fa-envelope {
+   background: #6C7B8B;
    color: white;
    }
 </style>
