--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@
    color: white;
    }
 
+   .fa-file-pdf-o {
+   background: #6C7B8B;
+   color: white;
+   }
+
    .fa-twitter {
    background: #1DA1F2;
    color:  white;
